test/fixtures/syntax-error/conf/base.js
module.exports = {
	this is invalid javascript syntax!!!
};
